--- a/inlineblock.html
+++ b/inlineblock.html
@@ -2,9 +2,9 @@
 <html >
 <head>
     
-    <title></title>
+    <title>Assignment15</title>
 </head>
 <body>
-    
+    <h1>learn about inline and inline block</h1>
 </body>
 </html>
